# Tetris

./: .gitignore  CMakeLists.txt  run.sh  testSuite.sh
include/: board.h
tests/visual/: sfmlWindow.cpp
